@@ -1,3 +1,7 @@
+2019-10-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/ext/constexpr-attr-cleanup1.C: New test.
+
 2019-10-02  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/80936
